add crudl operations for awards entity
